<resources>
    <string name="app_name">ActivityIntentsTest_GB</string>
    <string name="your_name">Your name</string>
    <string name="greeetings">Greeetings</string>
    <string name="account">Account</string>
    <string name="privet">Привет дорогой</string>
    <string name="your_sure_name">Your sure name</string>
    <string name="your_age">Your age</string>
    <string name="bt_return">Return</string>
    <string name="settings">Settings</string>
    <string name="your_email">Your email</string>
    <string name="result_from_settings_activity">Result from Settings Activity</string>
    <string name="greeting">Greeting!</string>
    <string name="find_a_name_on_the_internet">Find a name on the Internet</string>

</resources>